--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ layout: default
           {{ post.date | date: "%F"}}</time> 
         <div class = "tag-img-icon">
           <img src="/images/tag-icon.svg" width="20px" /> 
+          
         </div>
         <a href="/tags">
           <div class = "post-list-icon-mate">
@@ -70,21 +71,21 @@ layout: default
 
 <body style="height:1000px;">
 <!-- 小人只在首页显示 start* -->
-<div id="spig" class="spig">
+<!-- <div id="spig" class="spig">
     <div id="message">正在加载中……</div>
     <div id="mumu" class="mumu"></div>
-</div>
+</div> -->
 <!-- 小人end* -->
 
 
 </body>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<script type="text/javascript" src="js/jquery.xiaoren.js"></script>
-<script type="text/javascript" src="js/spig.js"></script>
+<!-- <script type="text/javascript" src="js/jquery.xiaoren.js"></script>
+<script type="text/javascript" src="js/spig.js"></script> -->
 
 <link rel="stylesheet" href="css/xiaoren.css" type="text/css"/>
 
-<script type="text/javascript">
+<!-- <script type="text/javascript">
 var isindex = "oooo";
 var visitor = "你好";
-</script> 
+</script>  -->
